--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "private": true,
-  "devDependencies": {
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "typescript": "^5.1.6"
-  }
+	"private": true,
+	"scripts": {
+		"format": "biome format --write .",
+		"lint": "biome lint --write ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.8.1",
+		"@types/react": "^18.2.20",
+		"@types/react-dom": "^18.2.7",
+		"typescript": "^5.1.6"
+	}
 }
