--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,13 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@mantine/core": "^7.10.2",
+		"@mantine/form": "^7.10.2",
+		"@mantine/hooks": "^7.10.2",
 		"@remix-run/node": "^2.9.2",
 		"@remix-run/react": "^2.9.2",
 		"@remix-run/serve": "^2.9.2",
+		"@tabler/icons-react": "^3.6.0",
 		"isbot": "^4.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
@@ -21,6 +25,8 @@
 		"@remix-run/dev": "^2.9.2",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
+		"postcss-preset-mantine": "^1.15.0",
+		"postcss-simple-vars": "^7.0.1",
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.1.0",
 		"vite-tsconfig-paths": "^4.2.1"
