--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
     }
   },
   "files": {
-    "ignore": ["node_modules/**"]
+    "ignore": ["node_modules/**", "web/gql/**"]
   },
   "vcs": {
     "useIgnoreFile": true
