--- a/web/package.json
+++ b/web/package.json
@@ -1,37 +1,46 @@
 {
-	"name": "web",
-	"private": true,
-	"sideEffects": false,
-	"type": "module",
-	"scripts": {
-		"build": "remix vite:build",
-		"dev": "remix vite:dev",
-		"start": "remix-serve ./build/server/index.js",
-		"typecheck": "tsc"
-	},
-	"dependencies": {
-		"@mantine/core": "^7.10.2",
-		"@mantine/form": "^7.10.2",
-		"@mantine/hooks": "^7.10.2",
-		"@remix-run/node": "^2.9.2",
-		"@remix-run/react": "^2.9.2",
-		"@remix-run/serve": "^2.9.2",
-		"@tabler/icons-react": "^3.6.0",
-		"isbot": "^4.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@remix-run/dev": "^2.9.2",
-		"autoprefixer": "^10.4.19",
-		"postcss": "^8.4.38",
-		"postcss-preset-mantine": "^1.15.0",
-		"postcss-simple-vars": "^7.0.1",
-		"tailwindcss": "^3.4.4",
-		"vite": "^5.1.0",
-		"vite-tsconfig-paths": "^4.2.1"
-	},
-	"engines": {
-		"node": ">=20.0.0"
-	}
+  "name": "web",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc",
+    "codegen": "graphql-codegen --config gql.codegen.ts",
+    "predev": "pnpm run codegen"
+  },
+  "dependencies": {
+    "@mantine/core": "^7.10.2",
+    "@mantine/form": "^7.10.2",
+    "@mantine/hooks": "^7.10.2",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
+    "@tabler/icons-react": "^3.6.0",
+    "@tanstack/react-query": "^5.45.1",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.2",
+    "graphql-request": "^7.0.1",
+    "isbot": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.3.0",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@remix-run/dev": "^2.9.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
