--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-  "editor.codeActionsOnSave":{
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "explicit"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
   }
 }
