--- a/web/package.json
+++ b/web/package.json
@@ -13,19 +13,21 @@
   },
   "dependencies": {
     "@mantine/core": "^7.10.2",
-    "@mantine/form": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.6.0",
+    "@tanstack/react-form": "^0.23.2",
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/valibot-form-adapter": "^0.23.2",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.2",
     "graphql-request": "^7.0.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "valibot": "^0.33.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
