--- a/web/package.json
+++ b/web/package.json
@@ -5,11 +5,10 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "dev": "concurrently 'pnpm run codegen --watch' 'remix vite:dev'",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "codegen": "graphql-codegen --config gql.codegen.ts",
-    "predev": "pnpm run codegen"
+    "codegen": "graphql-codegen --config gql.codegen.ts"
   },
   "dependencies": {
     "@mantine/core": "^7.10.2",
@@ -33,8 +32,13 @@
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.0",
     "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/typed-document-node": "^5.0.7",
+    "@graphql-codegen/typescript": "^4.0.7",
+    "@graphql-codegen/typescript-operations": "^4.2.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@remix-run/dev": "^2.9.2",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
