--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "cd web && pnpm run dev",
+    "check": "biome check --write .",
     "format": "biome format --write .",
     "lint": "biome lint --write ."
   },
